clusters/compute/k8s/apps/home-automation/zigbee2mqtt/app/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zigbee2mqtt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
